--- a/x-polyedit.css
+++ b/x-polyedit.css
@@ -7,7 +7,8 @@
 :host([content-style="html"]) ::content *:after {
   font-family: monospace;
   color: #9f499b;
-  display: inline;
+  display: inline-block;
+  width: auto;
   opacity: 1;
   font-size: 1em; }
 
@@ -40,10 +41,18 @@
   content: "p"; }
 :host([content-style="jade"]) ::content span:before {
   content: "span"; }
+:host([content-style="jade"]) ::content div:before {
+  content: "div"; }
 :host([content-style="jade"]) ::content ul:before {
   content: "ul"; }
 :host([content-style="jade"]) ::content li:before {
   content: "li"; }
+:host([content-style="jade"]) ::content strong:before {
+  content: "strong"; }
+:host([content-style="jade"]) ::content b:before {
+  content: "b"; }
+:host([content-style="jade"]) ::content i:before {
+  content: "i"; }
 
 :host([content-style="html"]) ::content h1:before {
   content: "<h1>"; }
@@ -65,6 +74,10 @@
   content: "<span>"; }
 :host([content-style="html"]) ::content span:after {
   content: "</span>"; }
+:host([content-style="html"]) ::content div:before {
+  content: "<div>"; }
+:host([content-style="html"]) ::content div:after {
+  content: "</div>"; }
 :host([content-style="html"]) ::content ul:before {
   content: "<ul>"; }
 :host([content-style="html"]) ::content ul:after {
@@ -73,5 +86,17 @@
   content: "<li>"; }
 :host([content-style="html"]) ::content li:after {
   content: "</li>"; }
+:host([content-style="html"]) ::content strong:before {
+  content: "<strong>"; }
+:host([content-style="html"]) ::content strong:after {
+  content: "</strong>"; }
+:host([content-style="html"]) ::content b:before {
+  content: "<b>"; }
+:host([content-style="html"]) ::content b:after {
+  content: "</b>"; }
+:host([content-style="html"]) ::content i:before {
+  content: "<i>"; }
+:host([content-style="html"]) ::content i:after {
+  content: "</i>"; }
 
 /*# sourceMappingURL=x-polyedit.css.map */
