moved stuff around

--- a/public/components/x-polyedit/demo.html
+++ b/public/components/x-polyedit/demo.html
@@ -7,23 +7,23 @@
   <meta name="viewport"
         content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 
-  <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
+  <script src="../../bower_components/webcomponentsjs/webcomponents.js"></script>
 
-  <script src="bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="../../bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
-  <link rel="import" href="bower_components/polymer/polymer.html">
+  <link rel="import" href="../../bower_components/polymer/polymer.html">
 
-  <link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
-  <link rel="import" href="bower_components/core-toolbar/core-toolbar.html"/>
-  <link rel="import" href="bower_components/core-dropdown/core-dropdown.html">
-  <link rel="import" href="bower_components/core-dropdown-menu/core-dropdown-menu.html">
-  <link rel="import" href="bower_components/core-menu/core-menu.html">
-  <link rel="import" href="bower_components/core-item/core-item.html">
+  <link rel="import" href="../../bower_components/core-header-panel/core-header-panel.html">
+  <link rel="import" href="../../bower_components/core-toolbar/core-toolbar.html"/>
+  <link rel="import" href="../../bower_components/core-dropdown/core-dropdown.html">
+  <link rel="import" href="../../bower_components/core-dropdown-menu/core-dropdown-menu.html">
+  <link rel="import" href="../../bower_components/core-menu/core-menu.html">
+  <link rel="import" href="../../bower_components/core-item/core-item.html">
 
   <link rel="import" href="x-polyedit.html">
-  <link rel="import" href="demo-service.html"/>
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/>
+  <link rel="import" href="../../../demo-service.html"/>
+  <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.min.css"/>
   <style>
     .test-editor {
       margin: 10px;
@@ -39,7 +39,7 @@
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation" class="active"><a href="/">Home</a></li>
-            <li role="presentation"><a href="/demo.html">Demo</a></li>
+            <li role="presentation"><a href="/public/components/x-polyedit/demo.html">Demo</a></li>
             <li role="presentation"><a href="">Contact</a></li>
           </ul>
         </nav>
